# xcpkg

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  _xcpkg  help.txt  proxy-cc.c  publish.sh  relationship.dot  tmp  wrapper-native-cc.c  wrapper-target-c++.c  wrapper-target-cc-test.sh  wrapper-target-cc.c  wrapper-target-objc.c  xcpkg  xcpkg-core-latest-release-version  xcpkg-help.txt  xcpkg-url-transform.sample  xcpkg-wrapper-cc.c  xcpkg-zsh-completion  xcpkg.rb
.github/workflows/: brew.yml  brew.yml.bak  build-with-ppkg.yml  build-with-xcpkg.yml  ci.yml  ppkg.yml  publish-core.yml  publish-main.yml  publish.yml  test.yml  vcpkg.yml  xcpkg-brew-version-compare.yml
build-aux-utils/: gen-data.sh
c/: CMakeLists.txt  debugable
c/src/: bundle.c  check.c  command-path-in-uppm.c  completion.c  config-SSL_CERT_FILE.c  config.h  config.h.in  depends.c  download-and-unpack.c  download.c  error.c  examine-file-name-from-url.c  examine-file-type-from-url.c  extract-filename-from-url.c  extract-filetype-from-url.c  extract-version-from-git-ref.c  extract-version-from-url.c  extract-version.c  fetch-from-git.c  fetch.c  file-copy.c  file-write.c  fork+exec.c  formula-bat.c  formula-load.c  formula-repo-add.c  formula-repo-config-write.c  formula-repo-info.c  formula-repo-list-printf.c  formula-repo-list.c  formula-view.c  generate-url-transform-sample.c  getPlatformIDbyName.c  git-sync.c  help.c  home.c  http-fetch.c  info-available.c  info-installed.c  inspect-package.c  (+32 more)
c/src/core/: exe.c  printenv.h  sysinfo.c  url-transform.c  urlcode.c
core/: file2c.c  gen-data.sh  help.txt  sed-in-place.c  wrapper-native-c++.c  wrapper-native-cc.c  wrapper-native-objc.c  wrapper-target-c++.c  wrapper-target-cc-test.sh  wrapper-target-cc.c  wrapper-target-objc.c  xcpkg-install
src/: about.c  buildinfo.c  bundle.c  check.c  cleanup.c  command-path-in-uppm.c  config.h.in  extract-filename-from-url.c  extract-filetype-from-url.c  file-read.c  file-write.c  fork+exec.c  formula-bat.c  formula-cat.c  formula-edit.c  formula-load.c  formula-path.c  formula-repo-add.c  formula-repo-change.c  formula-repo-config-write.c  formula-repo-create.c  formula-repo-list-update.c  formula-repo-list.c  formula-repo-lookup.c  formula-repo-parse.c  formula-repo-remove.c  formula-repo-sync.c  formula-set.c  git-sync.c  help.c  http-fetch.c  info-installed.c  inspect-package.c  inspect-target.c  install.c  list-installed-packages.c  list-outdated-packages.c  logs.c  mkdir-p.c  native-package.c  (+24 more)
src/core/: base16.h  exe.c  list-PATH.c  list-PATH.h  printenv.c  self.c  sysinfo.c  sysinfo.h  tar.c  tar.h  url-transform.h  urlcode.h
zsh-completion/: _ipkg  _xcpkg
